# Polish

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE-MIT  PLAN.md  PROJECT.md  README.md  deny.toml
.github/workflows/: ci.yml
.vskill-data/: PROJECT-v1.md  index.json
.vskill-data/Polish-prototype/: .thumbnail  Polish.html
.vskill-data/Polish-prototype/src/: app.jsx  charts.jsx  clean.jsx  components.jsx  dashboard.jsx  data.jsx  format-prep.jsx  history.jsx  icons.jsx  quarantine.jsx  settings.jsx  sidebar.jsx
.vskill-data/Polish-prototype/uploads/: PLAN-0417f3d0.md
.vskill-data/debate/: transcript.md
.vskill-data/debate/v2/: PROJECT.md  transcript.md
.vskill-data/design/_tokens-preview/: calm-craft.html  calm-modern.html  fluent-native.html  terminal-mono.html
.vskill-data/design/v1/: DESIGN.md  design-tokens.json  prototype_design_flow.json
.vskill-data/design/v2/: DESIGN.md  design-tokens.json  prototype_design_flow.json
.vskill-data/research/best-code-architecture-polish-rust/: findings.md  research.json
.vskill-data/research/exe-vs-dll-architecture/: findings.md  research.json
.vskill-data/research/stress-test-project-risks/: findings.md  research.json
apps/: README.md
crates/wc-adapters/: Cargo.toml
crates/wc-adapters/src/: env.rs  lib.rs  scan_util.rs
crates/wc-adapters/src/categories/: cargo_cache.rs  chrome_cache.rs  edge_cache.rs  firefox_cache.rs  mod.rs  npm_cache.rs  pnpm_cache.rs  windows_logs.rs  windows_temp.rs
crates/wc-adapters/src/pq_writer/: atomic.rs  hash.rs  journal.rs  mod.rs  writer.rs
crates/wc-app/: Cargo.toml
crates/wc-app/src/: lib.rs  orchestrator.rs
crates/wc-app/src/usecase/: execute_cleanup.rs  mod.rs  preview_cleanup.rs  restore_quarantine.rs  scan_disk.rs
crates/wc-cli/: Cargo.toml
crates/wc-cli/src/: main.rs
crates/wc-core/: Cargo.toml
crates/wc-core/src/: category.rs  environment.rs  lib.rs  manifest.rs  quarantine.rs  rule.rs
crates/wc-core/src/pipeline/: mod.rs  states.rs  transitions.rs
crates/wc-core/src/ports/: clock_port.rs  fs_port.rs  mod.rs  notify_port.rs  pq_port.rs  reg_port.rs  signing_port.rs  wsl_port.rs
crates/wc-ipc/: Cargo.toml
crates/wc-ipc/src/: lib.rs
crates/wc-svc/: Cargo.toml
crates/wc-svc/src/: main.rs
crates/wc-test-fixtures/: Cargo.toml
crates/wc-test-fixtures/src/: lib.rs
crates/wc-ui/: AGENTS.md  SETUP.md  index.html  package-lock.json  package.json  vite.config.ts
crates/wc-ui/src/: App.tsx  main.tsx  styles.css
crates/wc-ui/src-tauri/: Cargo.toml  tauri.conf.json
crates/wc-ui/src-tauri/src/: lib.rs  main.rs
crates/wc-ui/src/__tests__/: App.test.tsx
crates/wc-ui/src/__tests__/components/: ConfirmModal.test.tsx  LockedFilesModal.test.tsx  PageLayout.test.tsx  Sidebar.test.tsx  (+1 more)
crates/wc-ui/src/components/: ConfirmModal.module.css  ConfirmModal.tsx  LockedFilesModal.tsx  PageLayout.tsx  Sidebar.tsx  SidebarItem.tsx  ToastStack.tsx
crates/wc-ui/src/hooks/: useAccent.ts  useDensity.ts  useEnvironment.ts  useExecute.ts  usePrefersReducedMotion.ts  useRoute.ts  useScan.ts  useToastStack.ts
crates/wc-ui/src/lib/: charts.ts  commands.ts  dashboard-data.ts  dashboard-helpers.ts  format.ts  kpi-tiles.ts  motion.ts  page-resolver.tsx  routes.ts  variants.ts
crates/wc-ui/src/pages/: Dashboard.tsx  Home.tsx  PlaceholderPage.tsx
crates/wc-ui/src/styles/: base.css  index.css  tokens.css
crates/wc-ui/src/types/: accent.ts  activity-heatmap.ts  badge.ts  button.ts  card.ts  category-group.ts  charts.ts  checkbox.ts  confirm-modal.ts  dashboard-data.ts  dashboard-widget-grid.ts  dashboard-widget.ts  dashboard.ts  density.ts  dot.ts  drawer.ts  drive-gauge.ts  environment.ts  execute-result.ts  finding.ts  format-prep-cta.ts  kpi-band.ts  largest-opportunities.ts  locked-files-modal.ts  modal.ts  num-display.ts  page-layout.ts  placeholder-page.ts  progress.ts  quarantine-summary.ts  route.ts  segmented.ts  sidebar.ts  toast.ts  toggle.ts  tooltip.ts  top-reclaim-table.ts  use-environment.ts  use-scan.ts
docs/project-structure/: README.md  _feature-version-matrix.md
docs/project-structure/01-dashboard/: README.md
docs/project-structure/01-dashboard/features/: disk-breakdown-donut.md  disk-usage-widget.md  format-prep-cta.md  kpi-band.md  largest-opportunities-bars.md  last-scan-widget.md  quarantine-widget.md  reclaim-trend-sparkline.md  scan-activity-heatmap.md  service-status-widget.md  top-reclaim-opportunities.md
docs/project-structure/02-clean/: README.md
docs/project-structure/02-clean/features/: category-tree.md  mode-picker.md  preview-step.md  result-step.md  run-step.md  special-case-confirms.md
docs/project-structure/03-prepare-for-format/: README.md
docs/project-structure/03-prepare-for-format/features/: step-1-system-snapshot.md  step-2-backup-destination.md  step-3-backup-execution.md  step-4-verify-integrity.md  step-5-cleanup.md  step-6-restore-plan.md  step-7-final-greenlight.md
docs/project-structure/04-quarantine/: README.md
docs/project-structure/04-quarantine/features/: auto-purge-policy.md  bulk-actions.md  detail-drawer.md  filters.md  restore-actions.md  run-list.md
docs/project-structure/05-history/: README.md
docs/project-structure/05-history/features/: activity-log.md  export.md  filters.md  search.md
docs/project-structure/06-settings/: README.md
docs/project-structure/06-settings/features/: advanced.md  auto-clean.md  cleanup-defaults.md  general.md  notifications.md  privacy.md  quarantine.md  scanning.md  service.md  updates.md
docs/project-structure/07-about/: README.md
docs/project-structure/07-about/features/: contributors-links.md  diagnostic-info.md  license.md  version-info.md
docs/project-structure/_shared/: empty-states.md  onboarding-first-run.md  sidebar.md  toast-notifications.md  tray-menu.md
docs/project-structure/_templates/: feature-template.md  page-template.md
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json
graphify-out/cache/: stat-index.json
scripts/: admin-cleanup-pass2.ps1  admin-cleanup.ps1  balanced-cleanup.ps1
(+81 files in other folders)
