[workspace]
resolver = "2"
members = [
    "crates/wc-core",
    "crates/wc-app",
    "crates/wc-adapters",
    "crates/wc-ipc",
    "crates/wc-test-fixtures",
    "crates/wc-svc",
    "crates/wc-cli",
    # "crates/wc-ui/src-tauri",  # uncomment after `npx @tauri-apps/cli@latest init` inside crates/wc-ui
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Polish contributors"]
repository = "https://github.com/TBD/polish"

[workspace.dependencies]
thiserror = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
mockall = "0.12"
inventory = "0.3"
blake3 = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = "z"
