[workspace]
resolver = "2"
members = [
    "crates/wc-core",
    "crates/wc-app",
    "crates/wc-adapters",
    "crates/wc-ipc",
    "crates/wc-test-fixtures",
    "crates/wc-svc",
    "crates/wc-cli",
    "crates/wc-ui/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
license = "MIT"
authors = ["Polish contributors"]
repository = "https://github.com/TBD/polish"

[workspace.dependencies]
thiserror = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["full"] }
mockall = "0.12"
inventory = "0.3"
walkdir = "2.5"
tempfile = "3"
blake3 = "1"
zstd = "0.13"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = "z"
