[package]
name = "wc-ui-tauri"
description = "Polish — Tauri 2 UI shell (codename wc-ui-tauri)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "wc_ui_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
wc-core = { path = "../../wc-core" }
wc-app = { path = "../../wc-app" }
wc-adapters = { path = "../../wc-adapters" }
